# mercury-lm

./: Cargo.toml  contrast_analysis.rs  contrast_fix.rs
src/: app.rs  app_impl.rs  download.rs  hf.rs  main.rs  model_download.rs  models.rs  runtime.rs  scan.rs  server.rs  spawn.rs  stream.rs  ui.rs  ui_chat.rs  ui_models.rs  ui_settings.rs  ui_top.rs  unzip.rs
